[package]
name = "denial-of-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.19"
colored = "2.0.0"
clap = { version = "3.1.5", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.9", features = ["socks"] }
